# spring-system

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  main.cpp
plots/: plotJacPlusODE.py  plotJacobian.py  plotSteps.py  plotStepsPlusMinus.py  symbolic.py
src/: DOPRI8.hpp  DOPRINew.hpp  LUDecompSolver.hpp  choleskysolver.hpp  choleskysolver_test.cpp  function.hpp  integrate.hpp  inverse_problem.hpp  jacobian.hpp  jacobianPlusODE.hpp  jacplusodetest.cpp  linearsystemsolver.hpp  ludcmp_test.cpp  main.cpp  matrix.hpp  matrixdata.hpp  odesolvers.hpp  qrdecompsolver.hpp  qrdecompsolver_test.cpp
